# ESP32-P4-FireBeetle-2-Camera-Recorder

./: .gitignore  .gitmodules  CMakeLists.txt  ESP-IDF_541_SETUP.md  README.md  avi_audio_check.py  boot_log.txt  boot_out.txt  boot_output.txt  camera_simple_test.c  camera_test_main.c  csi_capture_main.c  csi_debug_main.c  csi_full_init.c  csi_led_debug.c  csi_nopsram.c  csi_testpattern.c  fix_avi.py  flash_monitor.py  i2c_recover.c  monitor.py  read_serial.py  repair_avi.py  reset_read.py  reset_read2.py  sd_cam_test.c  sdkconfig  sdkconfig.defaults  serial_out.txt  serial_out2.txt  test_output_scaling_fix.txt  test_output_v2.txt  test_output_v3.txt  usb_video_viewer.py
main/: CMakeLists.txt  camera_recorder.c  idf_component.yml  led_blink.c  main.c  wifi_tcp_test.c
tests/: test_all.py
